--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <h1>Sprint1</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad commodi consectetur culpa delectus dicta, dolores doloribus fuga id illo inventore magnam minus modi natus, nesciunt quae qui rem sit veritatis?</p>
 </body>
 </html>
