--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Sprint1</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad commodi consectetur culpa delectus dicta, dolores doloribus fuga id illo inventore magnam minus modi natus, nesciunt quae qui rem sit veritatis?</p>
+    <h2>Lorem ipsum dolor sit amet.</h2>
     <script src="./main.js"></script>
 </body>
 </html>
